manifests/wireguard/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "wireguard"
  namespace: "wireguard"
  labels:
    app.kubernetes.io/name: "wireguard"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: "wireguard"
  template:
    metadata:
      labels:
        app.kubernetes.io/name: "wireguard"
    spec:
      containers:
        - name: "prowlarr"
          image: "lscr.io/linuxserver/prowlarr:latest"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 9696
              protocol: "TCP"
          startupProbe:
            tcpSocket:
              port: 9696
          readinessProbe:
            tcpSocket:
              port: 9696
          livenessProbe:
            tcpSocket:
              port: 9696
          volumeMounts:
            - mountPath: "/config"
              name: "prowlarr-config"

        - name: "transmission"
          image: "lscr.io/linuxserver/transmission:latest"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 9091
              protocol: "TCP"
          startupProbe:
            tcpSocket:
              port: 9091
          readinessProbe:
            tcpSocket:
              port: 9091
          livenessProbe:
            tcpSocket:
              port: 9091
          volumeMounts:
            - mountPath: "/config"
              name: "transmission-config"
            - mountPath: "/downloads"
              name: "transmission-downloads"

      volumes:
        - name: "prowlarr-config"
          persistentVolumeClaim:
            claimName: "prowlarr-config"
        - name: "transmission-config"
          persistentVolumeClaim:
            claimName: "transmission-config"
        - name: "transmission-downloads"
          persistentVolumeClaim:
            claimName: "transmission-downloads"
