manifests/wireguard/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: "wireguard"
  namespace: "wireguard"
spec:
  type: "ClusterIP"
  selector:
    app.kubernetes.io/name: "wireguard"
  ports:
    - port: 9091
      targetPort: 9091
      protocol: "TCP"
    - port: 9696
      targetPort: 9696
      protocol: "TCP"
---
apiVersion: v1
kind: Service
metadata:
  name: "prowlarr-lb"
  namespace: "wireguard"
  annotations:
    lbipam.cilium.io/ips: "192.168.1.60"
spec:
  type: "LoadBalancer"
  selector:
    app.kubernetes.io/name: "wireguard"
  ports:
    - port: 80
      targetPort: 9696
      protocol: "TCP"
---
apiVersion: v1
kind: Service
metadata:
  name: "transmission-lb"
  namespace: "wireguard"
  annotations:
    lbipam.cilium.io/ips: "192.168.1.57"
spec:
  type: "LoadBalancer"
  selector:
    app.kubernetes.io/name: "wireguard"
  ports:
    - port: 80
      targetPort: 9091
      protocol: "TCP"
