manifests/wireguard/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "wireguard"
  namespace: "wireguard"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: "wireguard"
  egress:
    - to:
        - ipBlock:
            cidr: "0.0.0.0/0"
      ports:
        - port: 51820
          protocol: "UDP"
    - to:
        - ipBlock:
            cidr: "10.0.0.0/8"
